added responsive css

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>NMK Construction</title>
   <link rel="stylesheet" href="index.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0>"
 </head>
 <body>
    
@@ -36,7 +37,7 @@
               <li>Road paving</li>
               <li>Sidewalk paving</li>
             </ul>
-            <div class="preview">
+            <div class="preview" >
                 <img style=" float:initial;height:350px;width:350px;" src="images/tar01.JPG"  class="zoom img-fluid " /> 
                 <img style=" float:initial;height:350px;width:350px;"  src="images/driveway02.JPG" class="zoom img-fluid " />
                 <img style=" float:initial;height:350px;width:350px;"  src="images/driveway01.JPG" class="zoom img-fluid " />
