--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>NMK Construction</title>
   <link rel="stylesheet" href="index.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0>"
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
    
