--- a/Resume.html
+++ b/Resume.html
@@ -114,7 +114,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: sans-serif}
       <div class="w3-container w3-card w3-white w3-margin-bottom">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>References</h2>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>Mr T Mhlangeni</b></h5>
+          <h5 class="w3-opacity"><b>Mr T Mlangeni</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Dev Ops Engineer</h6>
           <p>tmlangeni@gmail.com</p>
           <p>+263777062166</p>
